2013-04-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gp_time.h term/js/gnuplot_mouse.js term/js/gnuplot_svg.js:
	Change zero point of time coordinates to the unix epoch boundary
	1-Jan-1970.  Previous to this change gnuplot used a zero point of
	1-Jan-2000, which caused various user-visible problems when times
	were input or manipulated as raw seconds.
	Reversion to the previous choice of epoch boundary can be done by
	replacing a single #if (0) in gp_time.h and reverting the
	corresponding time calculation in the javascript files.

	* src/mouse.c src/time.c docs/gnuplot.doc:  Remove unused code
	and comments specific to the older use of a private epoch 
	boundary.

2013-04-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/wxterminal/wxt_gui.cpp (wxtPanel::RaiseConsoleWindow),
	src/wxterminal/wxt_gui.h: Implement space-raises-console for 
	Windows console mode gnuplot.

2013-04-04  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc, docs/term-ja.diff:
	Sync with English documentation (rev.1.774)

2013-04-04  Dima Kogan  <dima@secretsauce.net>

	* src/axis.h src/axis.c src/plot2d.c src/plot3d.c:
	Restore the original state of the "reverse" autoscaling flag when
	refreshing (as opposed to replotting).

2013-04-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/plot.c (main): Restore a code snippet for the Windows platform
	which got removed by accident on Feb 3rd. Fixes -persist mode on
	Windows.

2013-04-02  Christoph Bersch  <cbersch@users.sf.net>

	* term/post.trm term/PostScript/prologue.ps: Revise the code embedded
	to skip Level2 PostScript features if /Level1 is set to true in the
	header records at the top of an output *.ps or *.eps file.  The old
	version failed if a level 2 image > 64kBytes was encountered.

2013-04-01  Christoph Bersch  <cbersch@users.sf.net>

	* term/post.trm: Add support for /FlateDecode compression of images.
	The image is created as a PNG image using either the libgd or libcairo